--- a/CryptoCoins/Sources/PresentationLayer/UserStories/1. Список криптовалют/CryptocurrencyListViewController.xib
+++ b/CryptoCoins/Sources/PresentationLayer/UserStories/1. Список криптовалют/CryptocurrencyListViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CryptocurrencyListViewController" customModule="Debug" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="ViE-ir-Etf" id="h1p-Bd-JRL"/>
                 <outlet property="view" destination="iN0-l3-epB" id="MoB-OP-Pdm"/>
             </connections>
         </placeholder>
@@ -19,19 +20,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EXZ-cC-xhb">
-                    <rect key="frame" x="137.5" y="283.5" width="100" height="100"/>
-                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="100" id="Ehh-fP-bTQ"/>
-                        <constraint firstAttribute="width" constant="100" id="V5D-G8-W7h"/>
-                    </constraints>
-                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ViE-ir-Etf">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="EXZ-cC-xhb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="V2P-5a-KvR"/>
-                <constraint firstItem="EXZ-cC-xhb" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Wcr-Fb-fcw"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ViE-ir-Etf" secondAttribute="trailing" id="81y-K4-fjV"/>
+                <constraint firstItem="ViE-ir-Etf" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="N05-cO-ykC"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ViE-ir-Etf" secondAttribute="bottom" id="Z9w-Vx-ean"/>
+                <constraint firstItem="ViE-ir-Etf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="glb-1S-upv"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
         </view>
