--- a/CryptoCoins/Sources/PresentationLayer/UserStories/1. Список криптовалют/Cells/CryptocurrencyCell/CryptocurrencyTableViewCell.xib
+++ b/CryptoCoins/Sources/PresentationLayer/UserStories/1. Список криптовалют/Cells/CryptocurrencyCell/CryptocurrencyTableViewCell.xib
@@ -12,68 +12,81 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="CryptocurrencyTableViewCell" customModule="Debug" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="392" height="94"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="CryptocurrencyTableViewCell" customModule="Debug" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="392" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="392" height="93.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="392" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="pop-4a-bvx">
-                        <rect key="frame" x="20" y="8" width="352" height="77.5"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="ZrH-KP-9aE">
+                        <rect key="frame" x="20" y="11" width="352" height="53"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-7E-HuS">
-                                <rect key="frame" x="0.0" y="0.0" width="352" height="35"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c9S-51-Vo5">
+                                <rect key="frame" x="0.0" y="0.0" width="53" height="53"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="c9S-51-Vo5" secondAttribute="height" multiplier="1:1" id="Sub-6T-zae"/>
+                                    <constraint firstAttribute="height" constant="53" id="ses-nw-2m7"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="pop-4a-bvx">
+                                <rect key="frame" x="76" y="0.0" width="276" height="53"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8s-Hr-MjZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="239.5" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="19478,54 $" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhk-ql-l5Q">
-                                        <rect key="frame" x="247.5" y="0.0" width="104.5" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="T9Z-Fq-qnp">
-                                <rect key="frame" x="0.0" y="43" width="352" height="34.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCo-ul-nmb">
-                                        <rect key="frame" x="0.0" y="0.0" width="319" height="34.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="-2%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lz5-o2-rL7">
-                                        <rect key="frame" x="327" y="0.0" width="25" height="34.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-7E-HuS">
+                                        <rect key="frame" x="0.0" y="0.0" width="276" height="22.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8s-Hr-MjZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="163.5" height="22.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="19478,54 $" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhk-ql-l5Q">
+                                                <rect key="frame" x="171.5" y="0.0" width="104.5" height="22.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="T9Z-Fq-qnp">
+                                        <rect key="frame" x="0.0" y="30.5" width="276" height="22.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCo-ul-nmb">
+                                                <rect key="frame" x="0.0" y="0.0" width="243" height="22.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="-2%" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lz5-o2-rL7">
+                                                <rect key="frame" x="251" y="0.0" width="25" height="22.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="pop-4a-bvx" secondAttribute="bottom" constant="8" id="K6f-Ez-ZJb"/>
-                    <constraint firstItem="pop-4a-bvx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="Xkc-zS-Ey8"/>
-                    <constraint firstAttribute="trailing" secondItem="pop-4a-bvx" secondAttribute="trailing" constant="20" symbolic="YES" id="dL9-vu-R6T"/>
-                    <constraint firstItem="pop-4a-bvx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="mk7-fR-WaT"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="ZrH-KP-9aE" secondAttribute="bottom" id="0yp-K5-IlQ"/>
+                    <constraint firstItem="ZrH-KP-9aE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="GWX-jc-6W5"/>
+                    <constraint firstItem="ZrH-KP-9aE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="KQw-uZ-mY6"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="ZrH-KP-9aE" secondAttribute="trailing" id="gYF-Gg-sT1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="coinImageView" destination="c9S-51-Vo5" id="p2f-47-JzE"/>
                 <outlet property="nameLabel" destination="m8s-Hr-MjZ" id="9Rm-b9-bNk"/>
                 <outlet property="percentChangeLabel" destination="lz5-o2-rL7" id="qgm-5v-Akv"/>
                 <outlet property="priceLabel" destination="jhk-ql-l5Q" id="L8Z-oc-U8u"/>
                 <outlet property="symbolLabel" destination="DCo-ul-nmb" id="6Yr-XI-FcE"/>
             </connections>
-            <point key="canvasLocation" x="195.19999999999999" y="143.92803598200899"/>
+            <point key="canvasLocation" x="161.59999999999999" y="118.29085457271366"/>
         </tableViewCell>
     </objects>
 </document>
